testdata/Call.def/Call.meth_p/Call.meth_p.3.0.check
// hasErrors: true
-- [E100] Syntax Error: target/testdata/Call.def/Call.meth_p.scala:3:2 ---------
3 |  meth
  |  ^^^^
  |  method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
